# fixed-slice-vec

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: vec_like_ops.rs
src/: lib.rs  ring.rs  single.rs  slice_single.rs  slice_vec.rs  vec.rs
tests/: comparability_tests.rs  std_required_tests.rs
